--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </div>
 
   <table id="jeopardy">
-    <thead></thead>
-    <tbody></tbody>
+    <thead id="jeopardy-head"></thead>
+    <tbody id="jeopardy-body"></tbody>
   </table>
 
 <script src="https://unpkg.com/jquery"></script>
