--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Jeopardy</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Copse&display=swap"
         rel="stylesheet">
   <link rel="stylesheet" href="jeopardy.css">
@@ -18,16 +19,18 @@
   </header>
 
   <div id="spin-container">
-    <i class="fa fa-spin fa-spinner"></i>
+    <i class="fa fa-spin fa-spinner SPIN"></i>
   </div>
 
-  <table id="jeopardy">
+  <table class="table table-dark" id="jeopardy">
     <thead id="jeopardy-head"></thead>
     <tbody id="jeopardy-body"></tbody>
   </table>
 
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/lodash"></script>
 <!-- <script src="swjeopardy.js"></script> -->
 <script src="jeopardy.js"></script>
