--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <div id="spin-container">
     <i class="fa fa-spin fa-spinner SPIN"></i>
   </div>
-
-  <table class="table table-dark" id="jeopardy">
+  <div class="container">
+  <table class="table table-border" id="jeopardy">
     <thead id="jeopardy-head"></thead>
     <tbody id="jeopardy-body"></tbody>
   </table>
-
+</div>
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
@@ -38,6 +38,6 @@
 </body>
 </html>
 
-<!-- click to restart text -->
+<!-- click to restart text  -->
 <!-- change colors for question / answer -->
 <!-- other ways to make it prettier? -->
