--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <i class="fa fa-spin fa-spinner SPIN"></i>
   </div>
   <div class="container">
-  <table class="table table-border" id="jeopardy">
+  <table id="jeopardy">
     <thead id="jeopardy-head"></thead>
     <tbody id="jeopardy-body"></tbody>
   </table>
