--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Copse&display=swap"
         rel="stylesheet">
-  <link rel="stylesheet" href="jeopardy.css">
+  <link rel="stylesheet" href="app.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 <body>
@@ -21,12 +21,12 @@
   <div id="spin-container">
     <i class="fa fa-spin fa-spinner SPIN"></i>
   </div>
-  <div class="container">
-  <table id="jeopardy">
+ 
+  <table class="table table-bordered text-center col align-self-center" id="jeopardy">
     <thead id="jeopardy-head"></thead>
-    <tbody id="jeopardy-body"></tbody>
+    <tbody class="text-center" id="jeopardy-body"></tbody>
   </table>
-</div>
+
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
