--- a/index.html
+++ b/index.html
@@ -14,19 +14,23 @@
 </head>
 <body>
   <header>
-    <h1>Jeopardy!</h1>
+    <h1 class="display5 text-center">Jeopardy!</h1>
     <button id="start">Start!</button>
+  
   </header>
 
   <div id="spin-container">
     <i class="fa fa-spin fa-spinner SPIN"></i>
   </div>
- 
+  
+  <div class="container BOARD" style="display: none">
   <table class="table table-bordered text-center col align-self-center" id="jeopardy">
-    <thead id="jeopardy-head"></thead>
+    <thead class="col-md-auto" id="jeopardy-head"></thead>
     <tbody class="text-center" id="jeopardy-body"></tbody>
   </table>
-
+  </div>
+</div>
+<br>
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
