restart bug fixed

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
   
   <div class="container BOARD" style="display: none">
   <table class="table table-bordered text-center col align-self-center" id="jeopardy">
-    <thead class="col-md-auto" id="jeopardy-head"></thead>
-    <tbody class="text-center" id="jeopardy-body"></tbody>
+      <thead id="jeopardy-head"></thead>
+      <tbody class="text-center align-center" id="jeopardy-body"></tbody>
   </table>
-  </div>
+  <div>
+  <button id="restart" style="display: none">Restart</button>
+</div>
 </div>
 <br>
 <script src="https://unpkg.com/jquery"></script>
