--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
   <header>
     <h1 class="display5 text-center">Jeopardy!</h1>
-    <button id="start">Start!</button>
-  
+    <br>
+    <button class="justify-content-center" id="start">Start!</button>
   </header>
 
-  <div id="spin-container">
+  <div class="d-flex justify-content-center" id="spin-container">
     <i class="fa fa-spin fa-spinner SPIN"></i>
   </div>
   
