jeopardy bug fix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1 class="display5 text-center">Jeopardy!</h1>
   <br>
-  <button class="justify-content-center" id="start">Start!</button>
+  <button class="justify-content-center" id="start">Restart!</button>
 
   <div class="d-flex justify-content-center" id="spin-container">
     <i class="fa fa-spin fa-spinner SPIN"></i>
@@ -26,10 +26,7 @@
       <thead id="jeopardy-head"></thead>
       <tbody class="text-center align-center" id="jeopardy-body"></tbody>
   </table>
-  <div>
-  <button id="restart" style="display: none">Restart</button>
-</div>
-</div>
+  </div>
 <br>
 <script src="https://unpkg.com/jquery"></script>
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
