--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <h1 class="display5 text-center">Jeopardy!</h1>
   <br>
-  <button class="justify-content-center" id="start">Restart!</button>
+  <button class="justify-content-center" id="start">Start!</button>
 
   <div class="d-flex justify-content-center" id="spin-container">
     <i class="fa fa-spin fa-spinner SPIN"></i>
